examples/kpng-gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-kpng-gateway
spec:
  gatewayClassName: l-3-4-gateway-api-poc/kpng
  listeners:
  - name: all # This is ignored as KPNG does not undertand these
    port: 4000
    protocol: TCP
  infrastructure:
    annotations: 
      k8s.v1.cni.cncf.io/networks: '[{"name":"vlan-100","interface":"vlan-100"},{"name":"macvlan-nad","interface":"net1"}]'
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    service.kubernetes.io/service-proxy-name: my-kpng-gateway
spec:
  type: LoadBalancer
  externalIPs: 
  - 20.0.0.1
  selector:
    app: example-target-application-a
    l-3-4-gateway-api-poc/dummy-service-selector: "true"
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
