examples/stateless-load-balancer-gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-stateless-lb-gateway
spec:
  gatewayClassName: l-3-4-gateway-api-poc/stateless-load-balancer
  listeners:
  - name: all # This is ignored as KPNG does not undertand these
    port: 4000
    protocol: TCP
  infrastructure:
    annotations: 
      k8s.v1.cni.cncf.io/networks: '[{"name":"vlan-200","interface":"vlan-200"},{"name":"macvlan-nad-2","interface":"net2"}]' # Networks attached to the gateway workloads
      l-3-4-gateway-api-poc/networks: '[{"name":"macvlan-nad-2","interface":"net2"}]' # Networks towards the service selected pods
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    service.kubernetes.io/service-proxy-name: my-stateless-lb-gateway
spec:
  clusterIP: None
  selector:
    app: example-target-application-b
    l-3-4-gateway-api-poc/dummy-service-selector: "true"
